# Phantom

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PROJECT_PLAN.md  README.md  test_lock
.cargo/: config.toml
.qoder/: PLAN.md  settings.local.json
.qoder/specs/: Android_鸿蒙_unsafe_修复与验证_task-c6b.md  Phantom_HelloWorld_连接验证_task-c6b.md  Phantom_Server_自举改造_task-1cf.md  server-qr-and-mac-build.md
client/: Cargo.toml  README.md
client/android/: .gitignore  README.md
client/android/app/: build.gradle.kts
client/android/app/src/androidTest/java/co/phantom/android/: RustBridgeInstrumentedTest.kt
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/co/phantom/android/: MainActivity.kt  PhantomTunnelViewModel.kt  PhantomVpnService.kt  RustBridge.kt
client/android/app/src/main/res/drawable/: ic_launcher_background.xml
client/android/app/src/main/res/mipmap/: ic_launcher_round.xml
client/android/app/src/main/res/values/: strings.xml
client/android/app/src/test/java/co/phantom/android/: PhantomTunnelViewModelTest.kt
client/cli/: Cargo.toml
client/cli/src/: main.rs
client/harmony/: .gitignore  Cargo.toml  README.md  build-profile.json5  entry-default-debug-signed.hap  oh-package.json5
client/harmony/AppScope/: app.json5
client/harmony/AppScope/resources/base/element/: string.json
client/harmony/entry/: build-profile.json5  obfuscation-rules.txt  oh-package.json5
client/harmony/entry/src/main/: module.json5
client/harmony/entry/src/main/ets/: libphantom_harmony.so.d.ts
client/harmony/entry/src/main/ets/entryability/: EntryAbility.ets
client/harmony/entry/src/main/ets/pages/: Index.ets
client/harmony/entry/src/main/ets/vpnextability/: PhantomVpnExtensionAbility.ets
client/harmony/entry/src/main/resources/base/element/: string.json
client/harmony/rust/src/: lib.rs
client/mac/: .gitignore  Bridge.swift  Info.plist  Package.swift  Phantom.entitlements  PhantomMacApp.swift  PhantomTunnel.swift  README.md  SystemProxy.swift
client/mac/PhantomLibs/: .gitkeep
client/mac/Sources/PhantomMac/: Bridge.swift  PhantomMacApp.swift  PhantomTunnel.swift
client/mac/Sources/PhantomMacBuilder/: main.swift
client/src/: dns.rs  failover.rs  hello.rs  lib.rs  mux.rs  rules.rs  socks5.rs  stats.rs  tun.rs  tunnel.rs
client/src/platform/: android.rs  macos.rs  mod.rs
config/: client.toml  server.toml
core/: Cargo.toml
core/src/: buf_pool.rs  config.rs  constants.rs  error.rs  lib.rs  uri.rs
core/src/crypto/: aead_state.rs  keys.rs  noise.rs  reader.rs  session.rs  writer.rs
core/src/protocol/: address.rs  codec.rs  frame.rs
core/src/transport/: mod.rs  quic.rs  tcp.rs  traits.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: config.rs  constants.rs  lib.rs  uri.rs
crates/phantom-crypto/: Cargo.toml
crates/phantom-crypto/src/: aead_state.rs  cipher.rs  keys.rs  lib.rs  noise.rs  reader.rs  session.rs  writer.rs
crates/phantom-protocol/: Cargo.toml
crates/phantom-protocol/src/: address.rs  codec.rs  frame.rs  lib.rs
crates/phantom-transport/: Cargo.toml
crates/phantom-transport/src/: lib.rs  quic.rs  tcp.rs  traits.rs
deploy/: README.md  install.sh  phantom.service
phantom-bench/: Cargo.toml
phantom-bench/benches/: aead_throughput.rs  frame_codec.rs  handshake.rs  key_derivation.rs  pipeline.rs
phantom-e2e/: Cargo.toml
phantom-e2e/src/: fixture.rs  lib.rs  network.rs  socks5.rs  throughput.rs
phantom-e2e/tests/: correctness.rs  debug_test.rs  http_tunnel.rs  throughput.rs  weak_network.rs
scripts/: build-android.sh  build-harmony.sh  build-mac.sh
server/: Cargo.toml  README.md
server/src/: bin.rs  bootstrap.rs  handler.rs  lib.rs  linux_ext.rs
tests/: Cargo.toml
tests/bench/: Cargo.toml
tests/bench/benches/: aead_throughput.rs  frame_codec.rs  handshake.rs  key_derivation.rs  pipeline.rs  rule_engine.rs
tests/src/: echo.rs  fixture.rs  lib.rs  mock_web.rs  network.rs  socks5.rs  throughput.rs  udp_echo.rs
tests/tests/: cipher_matrix.rs  cli_system.rs  config_effect.rs  correctness.rs  debug_test.rs  dns_hijack.rs  full_link_tcp.rs  full_link_udp.rs  http_tunnel.rs  performance.rs  real_world.rs  rule_engine.rs  rule_engine_equivalence.rs  stats_metrics.rs  throughput.rs  weak_network.rs
xtask/: Cargo.toml
xtask/src/: main.rs
