[workspace]
resolver = "3"
members = [
    "core",
    "server",
    "client",
    "client/cli",
    "client/harmony",
    "xtask",
    "tests",
    "tests/bench",
]

default-members = [
    "core",
    "server",
    "client",
    "client/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Bytes
bytes = "1"

# Crypto
snow = { version = "0.9", features = ["risky-raw-split"] }
base64 = "0.22"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ascon-aead = "0.5"
aead = "0.5"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
cfg-if = "1"
zeroize = { version = "1.8", features = ["derive"] }

# QUIC
quinn = { version = "0.11", features = ["rustls-ring"] }
rcgen = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal QR code rendering (used by server bootstrap)
qr2term = "0.3"

# CLI
clap = { version = "4", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Bitflags
bitflags = "2"

# Lock-free structures
crossbeam-queue = "0.3"

# Benchmark
divan = "0.1"

# Internal crates
phantom-core = { path = "core" }
phantom-client = { path = "client" }
phantom-server = { path = "server" }
