[package]
name = "phantom-client"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-core = { workspace = true }
phantom-crypto = { workspace = true }
phantom-transport = { workspace = true }
phantom-protocol = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
quinn = { workspace = true }
async-trait = { workspace = true }
tun = { version = "0.7", features = ["async"] }
etherparse = "0.14"
toml = { workspace = true }
ipnet = "2.9"
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl"] }
maxminddb = { version = "0.24", optional = true }

[features]
default = []
geoip = ["maxminddb"]
