[package]
name = "phantom-client"
version.workspace = true
edition.workspace = true

[lib]
name = "phantom_client"
crate-type = ["rlib", "cdylib"]

[dependencies]
phantom-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
quinn = { workspace = true }
async-trait = { workspace = true }
tun = { version = "0.7", features = ["async"] }
etherparse = "0.14"
toml = { workspace = true }
ipnet = "2.9"
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl", "perf"] }
maxminddb = { version = "0.24", optional = true }
daachorse = "1"
iptrie = "0.8"
serde_json = { workspace = true }

[features]
default = []
geoip = ["maxminddb"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(any(target_os = "android", target_env = "ohos"))'.dependencies]
libc = "0.2.186"
