[package]
name = "phantom-bench"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-core = { workspace = true }
phantom-crypto = { workspace = true }
phantom-protocol = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
divan = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
ascon-aead = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "aead_throughput"
harness = false

[[bench]]
name = "handshake"
harness = false

[[bench]]
name = "key_derivation"
harness = false

[[bench]]
name = "frame_codec"
harness = false

[[bench]]
name = "pipeline"
harness = false
