[package]
name = "phantom-e2e"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-core = { workspace = true }
phantom-crypto = { workspace = true }
phantom-transport = { workspace = true }
phantom-protocol = { workspace = true }
phantom-client = { workspace = true }
phantom-server = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
rand = "0.8"
axum = "0.7"
