[package]
name = "phantom-server"
version.workspace = true
edition.workspace = true

[lib]
name = "phantom_server"
path = "src/lib.rs"

[[bin]]
name = "phantom-server"
path = "src/bin.rs"

[features]
default = []
io-uring = ["dep:tokio-uring"]

[dependencies]
phantom-core = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
quinn = { workspace = true }
qr2term = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }
