[package]
name = "phantom-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-core = { workspace = true }
snow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
ascon-aead = { workspace = true }
aead = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
cfg-if = { workspace = true }
rand_core = "0.6"
zeroize = { workspace = true }
